Add functions to control balloon click and random movement on screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="https://maxw.com/b1.png" alt="red balloon">
 
     <script src="assets/js/script.js"></script>
 </body>
