Update js and add initial comments

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Balloon Popper Game</title>
 </head>
 <body>
-    <img src="https://maxw.com/b1.png" alt="red balloon">
+    <h1 id="score-box"></h1>
+    <img id="balloon" src="https://maxw.com/b1.png" alt="red balloon">
 
     <script src="assets/js/script.js"></script>
 </body>
