Add Google font to styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="score-box"></h1>
-    <img id="balloon" src="https://maxw.com/b1.png" alt="red balloon">
+    <img id="balloon" src="assets/images/balloon-blue.png" alt="red balloon">
 
     <script src="assets/js/script.js"></script>
 </body>
