Modify js to creat game levels

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1 id="score-box"></h1>
-    <img id="balloon" src="assets/images/balloon-blue.png" alt="red balloon">
+    <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
+    <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
+    <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
+    <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon balloon">
 
     <script src="assets/js/script.js"></script>
 </body>
