Modify startgame function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     -->
     <div class="container">
         <div class="instructions">
-            <p>Welcome to "Balloon Popper"! This exciting game features three challenging levels: Easy, Medium, and Hard. Your
+            <h1>Welcome to "Balloon Popper"!</h1>
+            <p>This exciting game features three challenging levels: Easy, Medium, and Hard. Your
             objective is to pop balloons by clicking on them and earn points. However, be careful not to click on the red balloons,
             as they will deduct points from your score.
             
