--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Good luck and have fun playing "Balloon Popper"!</p>
         </div>
         <div class="form-container">
-            <form class="form">
+            <form class="form" id="game-form" action="game.html">
                 <input type="text" id="nickname" placeholder="Enter Your Nickname" required>
                 <label for="level">Difficulty Level:</label>
                 <select id="level" name="level">
@@ -55,7 +55,7 @@
                     <option value="medium">Medium</option>
                     <option value="hard">Hard</option>
                 </select>
-                <button type="button" id="start-button">Start Game</button>
+                <button type="submit" id="start-button">Start Game</button>
             </form>
         </div>
 
