Modify styles for easy.html

--- a/easy.html
+++ b/easy.html
@@ -16,10 +16,10 @@
     <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon balloon">
     <div class="container">
         <div class="form-container">
-            <form class="form" id="game-form" action="game.html">
-                <label id="score-box"><span id="nickname-display"></span></label>
-                <label id="score-box">Difficulty Level: Easy</label>
-                <label id="score-box">Score: </label>
+            <form class="form-levels" id="game-form" action="game.html">
+                <label><span id="nickname-display"></span></label>
+                <label>Difficulty Level: Easy</label>
+                <label id="score-label">Score: </label>
             </form>
         </div>
         
