Add basic game code that moves balloons

--- a/easy.html
+++ b/easy.html
@@ -19,7 +19,7 @@
             <form class="form-levels" id="game-form" action="game.html">
                 <label><span id="nickname-display"></span></label>
                 <label>Difficulty Level: Easy</label>
-                <label id="score-label">Score: </label>
+                <label id="score-label"></label>
             </form>
         </div>
         
