Add decrement score if red balloon is popped

--- a/easy.html
+++ b/easy.html
@@ -9,12 +9,12 @@
     <title>Balloon Popper Game</title>
 </head>
 
-<body id="game-html">
+<body id="body-game">
     <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
     <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
     <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
     <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon balloon">
-    <div class="container">
+    <div class="container-game">
         <div class="form-container">
             <form class="form-levels" id="game-form" action="game.html">
                 <label><span id="nickname-display"></span></label>
@@ -25,6 +25,7 @@
         
     </div>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/easy.js"></script>
 </body>
 
 </html>
