--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Balloon Popper Game</title>
 </head>
 
-<body>
+<body id="body-index">
     <div class="container">
         <div class="instructions">
             <h1>Welcome to "Balloon Popper"!</h1>
