Add medium.js script for medium difficulty game

--- a/medium.html
+++ b/medium.html
@@ -25,6 +25,7 @@
 
     </div>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/medium.js"></script>
 </body>
 
 </html>
