Add new balloons red heart, pink and purple

--- a/medium.html
+++ b/medium.html
@@ -11,6 +11,7 @@
 
 <body id="body-game">
     <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
+    <img id="red-heart-balloon" src="assets/images/balloon-heart-red.png" alt="red heart balloon">
     <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
     <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
     <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon balloon">
