Add pink balloon to medium.js

--- a/medium.html
+++ b/medium.html
@@ -14,7 +14,8 @@
     <img id="red-heart-balloon" src="assets/images/balloon-heart-red.png" alt="red heart balloon">
     <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
     <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
-    <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon balloon">
+    <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon">
+    <img id="pink-balloon" src="assets/images/balloon-pink.png" alt="pink-balloon">
     <div class="container-game">
         <div class="form-container">
             <form class="form-levels" id="game-form" action="game.html">
