--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </form>
         </div>
     </div>
+    <div class="footer">
+        <p>© 2023 Your Game Name. All rights reserved.</p>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
