--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                 </select>
                 <button type="submit" id="start-button">Start Game</button>
             </form>
+            <div id="error-message"></div>
+
         </div>
     </div>
     <div class="footer">
