Add audio when balloons pop.

--- a/medium.html
+++ b/medium.html
@@ -26,6 +26,10 @@
         </div>
 
     </div>
+    <!--All audio source https://pixabay.com-->
+    <audio id="pop-sound" src="assets/audio/balloon-pop.mp3"></audio>
+    <audio id="pop-bubbles" src="assets/audio/pop-bubbles.mp3"></audio>
+    <audio id="pop-negative" src="assets/audio/negative_beeps.mp3"></audio>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/medium.js"></script>
 </body>
