--- a/easy.html
+++ b/easy.html
@@ -13,7 +13,7 @@
     <img id="red-balloon" src="assets/images/balloon-red.png" alt="red balloon">
     <img id="blue-balloon" src="assets/images/balloon-blue.png" alt="blue balloon">
     <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
-    <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon">
+    <img id="green-balloon" src="assets/images/balloon-green.png" alt="green balloon">
     <div class="container-game">
         <div class="form-container">
             <form class="form-levels" id="game-form" action="game.html">
