--- a/index.html
+++ b/index.html
@@ -6,56 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="assets/images/parabim-favicon.png">
     <title>Balloon Popper Game</title>
 </head>
 
 <body id="body-index">
-    <div class="container">
-        <div class="instructions">
-            <h1>Welcome to "Balloon Popper"!</h1>
-            <p>This exciting game features three challenging levels: Easy, Medium, and Hard. Your
-                objective is to pop balloons by clicking on them and earn points. However, be careful not to click on
-                the red balloons,
-                as they will deduct points from your score.
+    <main>
+        <div class="container">
+            <section aria-label="welcome note and game instructions">
+                <!--welcome note and game instructions-->
+                <div class="instructions">
+                    <h1>Welcome to "Balloon Popper"!</h1>
+                    <p>This exciting game features three challenging levels: Easy, Medium, and Hard. Your
+                        objective is to pop balloons by clicking on them and earn points. However, be careful not to
+                        click on
+                        the red balloons,
+                        as they will deduct points from your score.
 
-                In the Easy level, blue and red balloons will randomly appear on the screen. Each time you successfully
-                pop a balloon
-                (excluding red balloons), your score will increase by 1. If your final score is greater than 6 out of
-                10, you will
-                advance to the next level. Otherwise, it's "Game Over!"
+                        In the Easy level, blue and red balloons will randomly appear on the screen. Each time you
+                        successfully
+                        pop a balloon
+                        (excluding red balloons), your score will increase by 1. If your final score is greater than 6
+                        out of
+                        10, you will
+                        advance to the next level. Otherwise, it's "Game Over!"
 
-                The Medium level introduces three types of balloons: blue, yellow, and red. Your goal remains the
-                same—popping blue or
-                yellow balloons earns you 1 point, while popping a red balloon deducts 1 point. To progress to the Hard
-                level, you must
-                achieve a minimum score of 6 out of 10. Falling short will result in "Game Over!"
+                        The Medium level introduces three types of balloons: blue, yellow, and red. Your goal remains
+                        the
+                        same—popping blue or
+                        yellow balloons earns you 1 point, while popping a red balloon deducts 1 point. To progress to
+                        the Hard
+                        level, you must
+                        achieve a minimum score of 6 out of 10. Falling short will result in "Game Over!"
 
-                The Hard level is the ultimate challenge. Here, four balloons—blue, green, yellow, and red—will appear
-                randomly. Popping
-                a blue, green, or yellow balloon will increase your score by 1 point, while clicking on a red balloon
-                will deduct 1
-                point. To emerge victorious and complete the game, you must score at least 6 out of 10. Otherwise, it's
-                "Game Over!"
+                        The Hard level is the ultimate challenge. Here, four balloons—blue, green, yellow, and red—will
+                        appear
+                        randomly. Popping
+                        a blue, green, or yellow balloon will increase your score by 1 point, while clicking on a red
+                        balloon
+                        will deduct 1
+                        point. To emerge victorious and complete the game, you must score at least 6 out of 10.
+                        Otherwise, it's
+                        "Game Over!"
 
-                Good luck and have fun playing "Balloon Popper"!</p>
+                        Good luck and have fun playing "Balloon Popper"!</p>
+                </div>
+            </section>
+            <nav>
+                <div class="form-container">
+                    <form class="form" id="game-form" action="game.html">
+                        <input type="text" id="nickname" placeholder="Enter Your Nickname" required>
+                        <label for="level">Difficulty Level:</label>
+                        <select id="level" name="level">
+                            <option value="easy">Easy</option>
+                            <option value="medium">Medium</option>
+                            <option value="hard">Hard</option>
+                        </select>
+                        <label for="sound">Sound:</label>
+                        <select id="sound" name="sound">
+                            <option value=true>Off</option>
+                            <option value="false">On</option>
+                        </select>
+                        <button type="submit" id="start-button">Start Game</button>
+                    </form>
+                </div>
+            </nav>
         </div>
-        <div class="form-container">
-            <form class="form" id="game-form" action="game.html">
-                <input type="text" id="nickname" placeholder="Enter Your Nickname" required>
-                <label for="level">Difficulty Level:</label>
-                <select id="level" name="level">
-                    <option value="easy">Easy</option>
-                    <option value="medium">Medium</option>
-                    <option value="hard">Hard</option>
-                </select>
-                <button type="submit" id="start-button">Start Game</button>
-            </form>
+
+        <div class="footer">
+            <p>© 2023 Your Game Name. All rights reserved.</p>
         </div>
-    </div>
-    <div class="footer">
-        <p>© 2023 Your Game Name. All rights reserved.</p>
-    </div>
-    <script src="assets/js/script.js"></script>
+        <script src="assets/js/script.js"></script>
+    </main>
 </body>
 
 </html>
