Modify footer styles.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section aria-label="welcome note and game instructions">
                 <!--welcome note and game instructions-->
                 <div class="instructions">
-                    <h1>Welcome to "Balloon Popper"!</h1>
+                    <h1>Welcome to Balloon Popper!</h1>
                     <p>This exciting game features three challenging levels: Easy, Medium, and Hard. Your
                         objective is to pop balloons by clicking on them and earn points. However, be careful not to
                         click on
@@ -55,8 +55,9 @@
             <nav>
                 <div class="form-container">
                     <form class="form" id="game-form" action="game.html">
-                        <input type="text" id="nickname"  aria-label="enter nickname" placeholder="Enter Your Nickname" required>
-                        <label for="level"  aria-label="select difficulty level">Difficulty Level:</label>
+                        <input type="text" id="nickname" aria-label="enter nickname" placeholder="Enter Your Nickname"
+                            required>
+                        <label for="level" aria-label="select difficulty level">Difficulty Level:</label>
                         <select id="level" name="level">
                             <option value="easy">Easy</option>
                             <option value="medium">Medium</option>
@@ -71,12 +72,12 @@
                     </form>
                 </div>
             </nav>
-        </div>
 
-        <div id="footer-copyright">
-            <p>&copy; Balloon Popper 2023 | <a href="https://parabim.com" target="_blank" rel="noopener"
-                    aria-label="visit ParaBIM Ltd. website (opens up in new tab)"><strong>ParaBIM Ltd.</strong></a>
-            </p>
+            <div id="footer-copyright">
+                <p>&copy; Balloon Popper 2023 | <a href="https://parabim.com" target="_blank" rel="noopener"
+                        aria-label="visit ParaBIM Ltd. website (opens up in new tab)"><strong>ParaBIM Ltd.</strong></a>
+                </p>
+            </div>
         </div>
         <script src="assets/js/script.js"></script>
     </main>
