Modify body flex box

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="body-index">
     <main>
-        <div class="container">
+        <div>
             <section aria-label="welcome note and game instructions">
                 <!--welcome note and game instructions-->
                 <div class="instructions">
@@ -73,7 +73,7 @@
                 </div>
             </nav>
 
-            <div id="footer-copyright">
+            <div class="footer">
                 <p>&copy; Balloon Popper 2023 | <a href="https://parabim.com" target="_blank" rel="noopener"
                         aria-label="visit ParaBIM Ltd. website (opens up in new tab)"><strong>ParaBIM Ltd.</strong></a>
                 </p>
