Modify form styles.

--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
             </section>
             <nav>
                 <div class="form-container">
-                    <form class="form" id="game-form" action="game.html">
+                    <form id="game-form" action="game.html">
                         <input type="text" id="nickname" aria-label="enter nickname" placeholder="Enter Your Nickname"
                             required>
+                    </form>
+                    <form id="game-form" action="game.html">
                         <label for="level" aria-label="select difficulty level">Difficulty Level:</label>
                         <select id="level" name="level">
                             <option value="easy">Easy</option>
                             <option value="medium">Medium</option>
                             <option value="hard">Hard</option>
                         </select>
+                    </form>
+                    <form id="game-form" action="game.html">
                         <label for="sound">Sound:</label>
                         <select id="sound" name="sound">
                             <option value=true>Off</option>
