Add game-button id to script.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <option value="hard">Hard</option>
                         </select>
                     </form>
-                    <form id="game-form" action="game.html">
+                    <form id="game-button" action="game.html">
                         <label for="sound">Sound:</label>
                         <select id="sound" name="sound">
                             <option value=true>Off</option>
