--- a/index.html
+++ b/index.html
@@ -59,18 +59,16 @@
                             required>
                     </form>
                     <form id="game-form" action="game.html">
-                        <label for="level" aria-label="select difficulty level">Difficulty Level:</label>
                         <select id="level" name="level">
-                            <option value="easy">Easy</option>
-                            <option value="medium">Medium</option>
-                            <option value="hard">Hard</option>
+                            <option value="easy">Difficulty Easy</option>
+                            <option value="medium">Difficulty Medium</option>
+                            <option value="hard">Difficulty Hard</option>
                         </select>
                     </form>
                     <form id="game-button" action="game.html">
-                        <label for="sound">Sound:</label>
                         <select id="sound" name="sound">
-                            <option value=true>Off</option>
-                            <option value="false">On</option>
+                            <option value=true>Sound Off</option>
+                            <option value="false">Sound On</option>
                         </select>
                         <button type="submit" id="start-button" aria-label="start game">Start Game</button>
                     </form>
