Modify game display.

--- a/medium.html
+++ b/medium.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/images/parabim-favicon.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Balloon Popper Game</title>
 </head>
@@ -16,16 +17,15 @@
     <img id="yellow-balloon" src="assets/images/balloon-yellow.png" alt="yellow balloon">
     <img id="green-balloon" src="assets/images/balloon-green.png" alt="green-balloon">
     <img id="pink-balloon" src="assets/images/balloon-pink.png" alt="pink-balloon">
-    <div class="container-game">
-        <div class="form-container">
+    
+        <div class="display-container">
             <form class="form-levels" id="game-form" action="game.html">
                 <label><span id="nickname-display"></span></label>
-                <label>Difficulty Level: Medium<label>
                 <label id="score-label"></label>
             </form>
         </div>
 
-    </div>
+    
     <!--All audio source https://pixabay.com-->
     <audio id="pop-sound" src="assets/audio/balloon-pop.mp3"></audio>
     <audio id="pop-bubbles" src="assets/audio/pop-bubbles.mp3"></audio>
