--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <section aria-label="welcome note and game instructions">
             <!--welcome note and game instructions-->
             <div class="instructions">
-                <h1>Welcome to Balloon Popper!</h1>
-                <p>This exciting game features three challenging levels: Easy, Medium, and Hard. Your
+                <h1 class="blackout">Welcome to Balloon Popper!</h1>
+                <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. Your
                     objective is to pop balloons by clicking on them and earn points. However, be careful not to
                     click on
                     the red balloons,
