Add resposive scaling at screen min width of 600.

--- a/index.html
+++ b/index.html
@@ -21,35 +21,11 @@
                 <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. Your
                     objective is to pop balloons by clicking on them and earn points. However, be careful not to
                     click on
-                    the red balloons,
-                    as they will deduct points from your score.
+                    the red balloon,
+                    which will deduct one point from your score. 
 
-                    In the Easy level, blue and red balloons will randomly appear on the screen. Each time you
-                    successfully
-                    pop a balloon
-                    (excluding red balloons), your score will increase by 1. If your final score is greater than 6
-                    out of
-                    10, you will
-                    advance to the next level. Otherwise, it's "Game Over!"
-
-                    The Medium level introduces three types of balloons: blue, yellow, and red. Your goal remains
-                    the
-                    same—popping blue or
-                    yellow balloons earns you 1 point, while popping a red balloon deducts 1 point. To progress to
-                    the Hard
-                    level, you must
-                    achieve a minimum score of 6 out of 10. Falling short will result in "Game Over!"
-
-                    The Hard level is the ultimate challenge. Here, four balloons—blue, green, yellow, and red—will
-                    appear
-                    randomly. Popping
-                    a blue, green, or yellow balloon will increase your score by 1 point, while clicking on a red
-                    balloon
-                    will deduct 1
-                    point. To emerge victorious and complete the game, you must score at least 6 out of 10.
-                    Otherwise, it's
-                    "Game Over!"
-
+                    Alternatively click the red heart balloon and two points will be added to your score. 
+                    <br>
                     Good luck and have fun playing "Balloon Popper"!</p>
             </div>
         </section>
