--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
             <!--welcome note and game instructions-->
             <div class="instructions">
                 <h1 class="blackout">Welcome to Balloon Popper!</h1>
-                <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. Your
-                    objective is to pop balloons by clicking on them and earn points. However, be careful not to
-                    click on
-                    the red balloon,
-                    which will deduct one point from your score. 
-
+                <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. 
+                    <br> 
+                    The game will faster as you switch between the levels. 
+                    <br>
+                    Your objective is to pop balloons by clicking on them to earn points. 
+                    <br>
+                    However, be careful not to click on the red balloon, which will deduct one point from your score. 
+                    <br>
                     Alternatively click the red heart balloon and two points will be added to your score. 
+                    <br>
                     <br>
                     Good luck and have fun playing "Balloon Popper"!</p>
             </div>
