Modify footer p font size.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="blackout">Welcome to Balloon Popper!</h1>
                 <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. 
                     <br> 
-                    The game will faster as you switch between the levels. 
+                    The game will get faster as you switch between the levels. 
                     <br>
                     Your objective is to pop balloons by clicking on them to earn points. 
                     <br>
