--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
             <!--welcome note and game instructions-->
             <div class="instructions">
                 <h1 class="blackout">Welcome to Balloon Popper!</h1>
-                <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard. 
-                    <br> 
-                    The game will get faster as you switch between the levels. 
+                <p class="blackout"> This exciting game features three challenging levels: Easy, Medium, and Hard.
                     <br>
-                    Your objective is to pop balloons by clicking on them to earn points. 
+                    The game will get faster as you switch between the levels.
                     <br>
-                    However, be careful not to click on the red balloon, which will deduct one point from your score. 
+                    Your objective is to pop balloons by clicking on them to earn points.
                     <br>
-                    Alternatively click the red heart balloon and two points will be added to your score. 
+                    However, be careful not to click on the red balloon, which will deduct one point from your score.
+                    <br>
+                    Alternatively click the red heart balloon and two points will be added to your score.
                     <br>
                     <br>
-                    Good luck and have fun playing "Balloon Popper"!</p>
+                    Good luck and have fun playing "Balloon Popper"!
+                </p>
             </div>
         </section>
         <nav>
@@ -37,13 +38,13 @@
                 <form id="game-form" action="game.html">
                     <input type="text" id="nickname" aria-label="enter nickname" placeholder="Enter Your Nickname"
                         required>
-                
+
                     <select id="level" name="level">
                         <option value="easy">Difficulty Easy</option>
                         <option value="medium">Difficulty Medium</option>
                         <option value="hard">Difficulty Hard</option>
                     </select>
-                
+
                     <select id="sound" name="sound">
                         <option value=true>Sound Off</option>
                         <option value="false">Sound On</option>
