--- a/medium.html
+++ b/medium.html
@@ -24,7 +24,14 @@
                 <label id="score-label"></label>
             </form>
         </div>
-
+        <div id="game-over-modal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <p>Game Over!</p>
+                <button id="play-again-btn">Play again!</button>
+                <button id="home-btn">Home</button>
+            </div>
+        </div>
     
     <!--All audio source https://pixabay.com-->
     <audio id="pop-sound" src="assets/audio/balloon-pop.mp3"></audio>
