Add comments to index.html

--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
                     Alternatively click the red heart balloon and two points will be added to your score.
                     <br>
                     <br>
-                    Good luck and have fun playing "Balloon Popper"!
+                    Good luck and have fun playing 
+                    <br>
+                    "Balloon Popper"!
                 </p>
             </div>
         </section>
+        <!--form to enter player details and navigate to gaming pages-->
         <section aria-label="Input player nickname, select difficulty and navigate to game.">
             <div class="form-container">
                 <form id="game-form" action="game.html">
                     <input type="text" id="nickname" aria-label="enter nickname" placeholder="Enter Your Nickname"
                         required>
-
                     <select id="level" name="level" aria-label="Select difficulty level">
                         <option value="easy">Difficulty Easy</option>
                         <option value="medium">Difficulty Medium</option>
                         <option value="hard">Difficulty Hard</option>
                     </select>
-
                     <select id="soundDropdown" name="sound" aria-label="Play sound">
                         <option value="false">Sound Off</option>
                         <option value="true">Sound On</option>
@@ -55,16 +56,14 @@
             </div>
         </section>
     </main>
+    <!--footer-->
     <div id="footer">
         <p>&copy; Balloon Popper 2023 | <a href="https://parabim.com" target="_blank" rel="noopener"
                 aria-label="visit ParaBIM Ltd. website (opens up in new tab)"><strong>ParaBIM Ltd.</strong></a>
         </p>
     </div>
-
+    <!--link to js script-->
     <script src="assets/js/script.js"></script>
-    <script src="assets/js/medium.js"></script>
-
-
 </body>
 
 </html>
