Add easy html and js.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                         <option value="false">Sound Off</option>
                         <option value="true">Sound On</option>
                     </select>
-                    <nav>
+                    <!--start game button-->
                         <button onclick="saveSoundOption()" type="submit" id="start-button"
                             aria-label="click to start game">Start Game</button>
-                    </nav>
                 </form>
             </div>
         </section>
