--- a/medium.html
+++ b/medium.html
@@ -24,6 +24,7 @@
             <div class="display-container">
                 <form class="form-levels" id="game-form" action="game.html">
                     <label aria-label="Player nickname"><span id="nickname-display"></span></label>
+                    <label aria-label="Difficulty medium">Medium Level</label>
                     <label id="score-label" aria-label="Player score"></label>
                 </form>
             </div>
